ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-ingress
  namespace: argocd
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.guven.uk
      http: 
        paths: 
          - pathType: Prefix
            backend:
              service: 
                name: argocd-server
                port: 
                  number: 80
            path: /
